--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div id="root"></div>
     <!-- CKEditor 5 Classic build from CDN -->
     <script src="https://cdn.ckeditor.com/ckeditor5/41.4.2/classic/ckeditor.js"></script>
+    <!-- Paystack inline JS for payment popup -->
+    <script src="https://js.paystack.co/v2/inline.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
